2010-07-12  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Oliver Hunt.

        CSS color parsing optimizations
        https://bugs.webkit.org/show_bug.cgi?id=42073

        - Avoid instantiating a CSSParser in parseColor() unless necessary.
        - Fixed hex color fast-path to support strings starting with '#'.
        - Avoid allocating a new string for the value part of a '#' color.

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseColor):
        * platform/graphics/Color.cpp:
        (WebCore::Color::parseHexColor):
        (WebCore::Color::Color):
        * platform/graphics/Color.h:

Canonical link: https://commits.webkit.org/53967@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63099 268f45cc-cd09-0410-ab3c-d52691b4dbfc